--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Models\Reuse\SqlItemTypeReuseTemplate.cs" />
     <Compile Include="Models\Reuse\SqlModifiedItems.cs" />
     <Compile Include="Models\Reuse\SqlReuseSettingsInfo.cs" />
+    <Compile Include="Models\Review\ReviewArtifactApprovalResult.cs" />
     <Compile Include="Models\VersionControl\PublishEnvironment.cs" />
     <Compile Include="Helpers\ReviewRawDataHelper.cs" />
     <Compile Include="Models\ArtifactHistoryResultSet.cs" />
