--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -35,7 +35,7 @@
   <appSettings>
     <add key="Service.Name" value="BlueprintActionHandler" />
     <add key="MessageProcessing.MaxConcurrency" value="1" />
-    <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=cloud;username=admin;password=$admin2011" />
+    <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=workflowtest;username=admin;password=$admin2011" />
     <add key="CacheExpirationMinutes" value="1440" />
     <add key="Tenancy" value="Single" />
     <add key="Transport" value="RabbitMQ" />
