--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -70,6 +70,7 @@
     <Compile Include="MessageActionType.cs" />
     <Compile Include="NotificationMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateChangeMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
