--- a/win_svc/Spikes/NServiceBusSpike/NServiceBusSpike.csproj
+++ b/win_svc/Spikes/NServiceBusSpike/NServiceBusSpike.csproj
@@ -9,11 +9,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NServiceBusSpike</RootNamespace>
     <AssemblyName>NServiceBusSpike</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -24,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -79,6 +81,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BluePrintSys.Messaging.Models.Action\BluePrintSys.Messaging.Models.Actions.csproj">
+      <Project>{03bd78ca-0bb7-4488-a0b3-4e07ce05391f}</Project>
+      <Name>BluePrintSys.Messaging.Models.Actions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets" Condition="Exists('packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets')" />
