--- a/svc/AccessControl/Web.config
+++ b/svc/AccessControl/Web.config
@@ -15,6 +15,16 @@
   <connectionStrings>
     <add name="AdminStorage" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Blueprint_AdminStorage;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
   </connectionStrings>
+  <!--<connectionStrings>
+    <add name="AdminStorage"
+         providerName="System.Data.SqlClient"
+         connectionString="data source=titan.blueprintsys.net;initial catalog=Titan_AdminStorage;integrated security=False;User Id=sa;Password=$Admin99;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+  </connectionStrings>-->
+  <!--<connectionStrings>
+    <add name="AdminStorage"
+         providerName="System.Data.SqlClient"
+         connectionString="data source=TORPERFDB1\IN2014STANDARD;initial catalog=Blueprint_AdminStorage;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+  </connectionStrings>-->
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.1" />
