--- a/svc/FileStore/Web.config
+++ b/svc/FileStore/Web.config
@@ -13,6 +13,16 @@
   <connectionStrings>
     <add name="FileStoreDatabase" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Blueprint_FileStorage;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
   </connectionStrings>
+  <!--<connectionStrings>
+    <add name="FileStoreDatabase"
+         providerName="System.Data.SqlClient"
+         connectionString="data source=titan.blueprintsys.net;initial catalog=Titan_FileStorage;integrated security=False;User Id=sa;Password=$Admin99;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+  </connectionStrings>-->
+  <!--<connectionStrings>
+    <add name="FileStoreDatabase"
+         providerName="System.Data.SqlClient"
+         connectionString="data source=TORPERFDB1\IN2014STANDARD;initial catalog=Blueprint_FileStorage;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+  </connectionStrings>-->
   <system.web>
     <httpModules>
       <remove name="DomainServiceModule" />
