--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -52,9 +52,10 @@
     <!-- Supported values -->
     <!-- RabbitMQ -->
     <!-- SQL -->
-    <add key="Transport" value="RabbitMQ"/>
+    <add key="MessageBroker" value="RabbitMQ"/>
     
-    <!-- Specifies the list of supported action types. Default value is "All" -->
+    <!-- Specifies the list of supported action types. Default value is "All". We can also specify multiple types e.g., Property,Notification -->
+    <!-- The list should be in a comma separated format. -->
     <!-- Supported Values -->
     <!-- Property -->
     <!-- Notification -->
