--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -206,14 +206,8 @@
     <Compile Include="Repositories\SqlPrivilegesRepository.cs" />
     <Compile Include="Repositories\SqlSettingsRepository.cs" />
     <Compile Include="Repositories\SqlUserRepository.cs" />
-    <Compile Include="Repositories\Workflow\IWorkflowDataValidator.cs" />
     <Compile Include="Repositories\Workflow\IWorkflowRepository.cs" />
-    <Compile Include="Repositories\Workflow\IWorkflowXmlValidator.cs" />
-    <Compile Include="Repositories\Workflow\WorkflowDataValidationResult.cs" />
-    <Compile Include="Repositories\Workflow\WorkflowDataValidator.cs" />
     <Compile Include="Repositories\Workflow\WorkflowRepository.cs" />
-    <Compile Include="Repositories\Workflow\WorkflowXmlValidationResult.cs" />
-    <Compile Include="Repositories\Workflow\WorkflowXmlValidator.cs" />
     <Compile Include="Saml\BpSaml2SecurityTokenHandler.cs" />
     <Compile Include="Saml\FederatedAuthenticationErrorCode.cs" />
     <Compile Include="Saml\FederatedAuthenticationException.cs" />
@@ -221,8 +215,14 @@
     <Compile Include="Saml\SamlCertificateValidator.cs" />
     <Compile Include="Saml\SamlRepository.cs" />
     <Compile Include="Saml\SamlIssuerNameRegistry.cs" />
+    <Compile Include="Services\Workflow\IWorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\IWorkflowService.cs" />
+    <Compile Include="Services\Workflow\IWorkflowXmlValidator.cs" />
+    <Compile Include="Services\Workflow\WorkflowDataValidationResult.cs" />
+    <Compile Include="Services\Workflow\WorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\WorkflowService.cs" />
+    <Compile Include="Services\Workflow\WorkflowXmlValidationResult.cs" />
+    <Compile Include="Services\Workflow\WorkflowXmlValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
