DEV-540 message modifications needed for implementing the ArtifactsPublishedHandler

--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionMessage.cs" />
+    <Compile Include="ArtifactsPublishedMessage.cs" />
     <Compile Include="GenerateDescendantsMessage.cs" />
     <Compile Include="GenerateTestsMessage.cs" />
     <Compile Include="GenerateUserStoriesMessage.cs" />
