modifying ArtifactsPublished message and extracting PublishedArtifactInformation into separate file

--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MessageActionType.cs" />
     <Compile Include="NotificationMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublishedArtifactInformation.cs" />
     <Compile Include="StateChangeMessage.cs" />
   </ItemGroup>
   <ItemGroup>
