--- a/win_svc/Spikes/NServiceBusSpike/App.config
+++ b/win_svc/Spikes/NServiceBusSpike/App.config
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
   <appSettings>
     <add key="ServerKey" value="Server"/>
     <add key="ServerEnabled" value="true"/>
     <add key="CreateCounters" value="true"/>
+    <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=workflowtest;username=admin;password=$admin2011"/>
+    <add key="QueueName" value="Albert.Queue"/>
   </appSettings>
 </configuration>
