--- a/win_svc/Spikes/NServiceBusSpike/NServiceBusSpike.csproj
+++ b/win_svc/Spikes/NServiceBusSpike/NServiceBusSpike.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NServiceBusSpike</RootNamespace>
     <AssemblyName>NServiceBusSpike</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
@@ -38,23 +38,23 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NServiceBus.Core, Version=6.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
-      <HintPath>packages\NServiceBus.6.3.4\lib\net452\NServiceBus.Core.dll</HintPath>
+      <HintPath>..\..\..\packages\NServiceBus.6.3.4\lib\net452\NServiceBus.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NServiceBus.Metrics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
-      <HintPath>packages\NServiceBus.Metrics.1.0.1\lib\net452\NServiceBus.Metrics.dll</HintPath>
+      <HintPath>..\..\..\packages\NServiceBus.Metrics.1.0.1\lib\net452\NServiceBus.Metrics.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NServiceBus.Metrics.PerformanceCounters, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
-      <HintPath>packages\NServiceBus.Metrics.PerformanceCounters.1.1.1\lib\net452\NServiceBus.Metrics.PerformanceCounters.dll</HintPath>
+      <HintPath>..\..\..\packages\NServiceBus.Metrics.PerformanceCounters.1.1.1\lib\net452\NServiceBus.Metrics.PerformanceCounters.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NServiceBus.Transports.RabbitMQ, Version=4.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
-      <HintPath>packages\NServiceBus.RabbitMQ.4.3.2\lib\net452\NServiceBus.Transports.RabbitMQ.dll</HintPath>
+      <HintPath>..\..\..\packages\NServiceBus.RabbitMQ.4.3.2\lib\net452\NServiceBus.Transports.RabbitMQ.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RabbitMQ.Client, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
-      <HintPath>packages\RabbitMQ.Client.4.1.0\lib\net451\RabbitMQ.Client.dll</HintPath>
+      <HintPath>..\..\..\packages\RabbitMQ.Client.4.1.0\lib\net451\RabbitMQ.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtifactsPublishedMessageHandler.cs" />
     <Compile Include="Counters.g.cs" />
     <Compile Include="EndpointCreator.cs" />
     <Compile Include="MessageScheduler.cs" />
@@ -80,7 +81,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BluePrintSys.Messaging.Models.Action\BluePrintSys.Messaging.Models.Actions.csproj">
@@ -89,12 +89,12 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets" Condition="Exists('packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets')" />
+  <Import Project="..\..\..\packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets" Condition="Exists('packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets'))" />
+    <Error Condition="!Exists('..\..\..\packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\NServiceBus.Metrics.PerformanceCounters.MsBuild.1.1.1\build\NServiceBus.Metrics.PerformanceCounters.MsBuild.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
