adding action parser

--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\ActionsParser.cs" />
     <Compile Include="Models\SqlModifiedProperty.cs" />
     <Compile Include="Models\SqlWorkFlowState.cs" />
     <Compile Include="Repositories\ActionHandlerRepository.cs" />
