DEV-540 created a stored procedure GetWorkflowTriggersForArtifacts

--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ActionsParser.cs" />
+    <Compile Include="Models\SqlArtifactTriggers.cs" />
     <Compile Include="Models\SqlModifiedProperty.cs" />
     <Compile Include="Models\SqlWorkFlowState.cs" />
     <Compile Include="Repositories\ActionHandlerRepository.cs" />
