DEV-759: Added unit test, created an initial model for xml serialization of triggers in the database.

--- a/svc/AdminStore.Tests/AdminStore.Tests.csproj
+++ b/svc/AdminStore.Tests/AdminStore.Tests.csproj
@@ -114,7 +114,7 @@
     <Compile Include="Repositories\SqlUserRepositoryTests.cs" />
     <Compile Include="Repositories\LdapRepositoryTests.cs" />
     <Compile Include="Repositories\WorkflowRepositoryTest.cs" />
-    <Compile Include="Repositories\Workflow\WorkflowValidatorTests.cs" />
+    <Compile Include="Repositories\Workflow\WorkflowXmlValidatorTests.cs" />
     <Compile Include="Saml\SamlCertificateValidatorTests.cs" />
     <Compile Include="Saml\SamlIssuerNameRegistryTests.cs" />
     <Compile Include="Services\WorkflowServiceTest.cs" />
