Modifying ArtifactsPublishedMessage and adding new message handlers for state change and property change

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -63,11 +63,12 @@
     <!-- GenerateTests -->
     <!-- GenerateUserStories -->
     <!-- StateChange -->
+    <!-- ArtifactsPublished -->
     <!-- All -->
-    <add key="SupportedActionTypes" value="All" />
+    <add key="SupportedActionTypes" value="StateChange" />
 
     <!-- Message Queue Name. Please be advised that changing queue name in configuration has to be supported with changing queue name in other blueprint components. -->
-    <add key="MessageQueue" value="Cloud.MessageServer" />
+    <add key="MessageQueue" value="Blueprint.Test.Cloud.MessageServer" />
 
     <!-- Error Queue Name. Error messages are forwarded to this queue. -->
     <add key="ErrorQueue" value="errors" />
