--- a/win_svc/Spikes/NServiceBusSpike/App.config
+++ b/win_svc/Spikes/NServiceBusSpike/App.config
@@ -8,6 +8,6 @@
     <add key="ServerEnabled" value="true"/>
     <add key="CreateCounters" value="true"/>
     <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=workflowtest;username=admin;password=$admin2011"/>
-    <add key="QueueName" value="Albert.Queue"/>
+    <add key="QueueName" value="Blueprint.Test.Cloud.MessageServer"/>
   </appSettings>
 </configuration>
