--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -99,6 +99,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ActionsParser.cs" />
+    <Compile Include="MessageHandlers\PropertyChange\PropertyChangeMessageHandler.cs" />
+    <Compile Include="MessageHandlers\PropertyChange\PropertyChangeMessageHelper.cs" />
+    <Compile Include="MessageHandlers\StateTransition\StateTransitionMessageHandler.cs" />
+    <Compile Include="MessageHandlers\StateTransition\StateTransitionMessageHelper.cs" />
     <Compile Include="Models\SqlArtifactTriggers.cs" />
     <Compile Include="Models\SqlModifiedProperty.cs" />
     <Compile Include="Repositories\ActionHandlerRepository.cs" />
