--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -65,7 +65,7 @@
     <!-- StateChange -->
     <!-- ArtifactsPublished -->
     <!-- All -->
-    <add key="SupportedActionTypes" value="StateChange" />
+    <add key="SupportedActionTypes" value="All" />
 
     <!-- Message Queue Name. Please be advised that changing queue name in configuration has to be supported with changing queue name in other blueprint components. -->
     <add key="MessageQueue" value="Blueprint.Test.Cloud.MessageServer" />
