DEV-759: Added a new Workflow Event, New Artifact, added the condition for triggers (for now it's just one condition on Property Change Event - State condition), further update for renaming Trigger to WorkflowEvent

--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -168,17 +168,20 @@
     <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Models\UserGroupSource.cs" />
     <Compile Include="Models\Workflow\IeBaseAction.cs" />
+    <Compile Include="Models\Workflow\IeCondition.cs" />
     <Compile Include="Models\Workflow\IeGenerateAction.cs" />
     <Compile Include="Models\Workflow\IeEmailNotificationAction.cs" />
+    <Compile Include="Models\Workflow\IeNewArtifactEvent.cs" />
     <Compile Include="Models\Workflow\IePropertyChangeAction.cs" />
     <Compile Include="Models\Workflow\IePropertyChangeEvent.cs" />
     <Compile Include="Models\Workflow\IeEvent.cs" />
+    <Compile Include="Models\Workflow\IeStateCondition.cs" />
     <Compile Include="Models\Workflow\IeTrigger.cs" />
     <Compile Include="Models\Workflow\SqlArtifactTypesWorkflowDetails.cs" />
     <Compile Include="Models\Workflow\WorkflowArtifactTypeDto.cs" />
     <Compile Include="Models\Workflow\SqlProjectPathPair.cs" />
     <Compile Include="Models\Workflow\SqlState.cs" />
-    <Compile Include="Models\Workflow\SqlTrigger.cs" />
+    <Compile Include="Models\Workflow\SqlWorkflowEvent.cs" />
     <Compile Include="Models\Workflow\IeArtifactType.cs" />
     <Compile Include="Models\Workflow\IeProject.cs" />
     <Compile Include="Models\Workflow\IeGroup.cs" />
