--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -194,9 +194,11 @@
     <Compile Include="Models\Workflow\WorkflowDto.cs" />
     <Compile Include="Models\Workflow\WorkflowProjectDto.cs" />
     <Compile Include="Models\Workflow\XmlAction.cs" />
+    <Compile Include="Models\Workflow\XmlCondition.cs" />
     <Compile Include="Models\Workflow\XmlEmailNotificationAction.cs" />
     <Compile Include="Models\Workflow\XmlGenerateAction.cs" />
     <Compile Include="Models\Workflow\XmlPropertyChangeAction.cs" />
+    <Compile Include="Models\Workflow\XmlStateCondition.cs" />
     <Compile Include="Models\Workflow\XmlTriggerPermissions.cs" />
     <Compile Include="Models\Workflow\XmlWorkflowEventTrigger.cs" />
     <Compile Include="Models\Workflow\XmlWorkflowEventTriggers.cs" />
