--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -42,8 +42,8 @@
       <add key="BrowserResizeEvent.MaxWaitTimeSeconds" value="10" />
       <add key="BrowserResizeEvent.DelayIntervalMilliseconds" value="10" />
       <add key="BrowserRender.DelayMilliseconds" value="500" />
-      <!--<add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=test;username=admin;password=$admin2011" />-->
-      <add key="NServiceBus.ConnectionString" value="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />
+      <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=test;username=admin;password=$admin2011" />
+      <!--<add key="NServiceBus.ConnectionString" value="Data Source=BlueprintDevDB;Initial Catalog=Raptor;Integrated Security=True;Max Pool Size=80" />-->
       <add key="BrowserRender.WaitTimeSeconds" value="10" />
     </appSettings>
   
