--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Models\AssignResult.cs" />
     <Compile Include="Models\AssignScope.cs" />
     <Compile Include="Models\CreateResult.cs" />
+    <Compile Include="Models\DTO\FolderDto.cs" />
     <Compile Include="Models\DTO\User.cs" />
     <Compile Include="Models\Enums\LicenseType.cs" />
     <Compile Include="Models\Enums\OperationMode.cs" />
@@ -221,6 +222,8 @@
     <Compile Include="Saml\SamlCertificateValidator.cs" />
     <Compile Include="Saml\SamlRepository.cs" />
     <Compile Include="Saml\SamlIssuerNameRegistry.cs" />
+    <Compile Include="Services\Instance\IInstanceService.cs" />
+    <Compile Include="Services\Instance\InstanceService.cs" />
     <Compile Include="Services\Workflow\IWorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\IWorkflowService.cs" />
     <Compile Include="Services\Workflow\IWorkflowXmlValidator.cs" />
