--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -227,10 +227,12 @@
     <Compile Include="Services\Instance\InstanceService.cs" />
     <Compile Include="Services\Workflow\IWorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\IWorkflowService.cs" />
+    <Compile Include="Services\Workflow\IWorkflowValidationErrorBuilder.cs" />
     <Compile Include="Services\Workflow\IWorkflowXmlValidator.cs" />
     <Compile Include="Services\Workflow\WorkflowDataValidationResult.cs" />
     <Compile Include="Services\Workflow\WorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\WorkflowService.cs" />
+    <Compile Include="Services\Workflow\WorkflowValidationErrorBuilder.cs" />
     <Compile Include="Services\Workflow\WorkflowXmlValidationResult.cs" />
     <Compile Include="Services\Workflow\WorkflowXmlValidator.cs" />
   </ItemGroup>
