--- a/win_svc/ActionHandlerServiceTests/ActionHandlerServiceTests.csproj
+++ b/win_svc/ActionHandlerServiceTests/ActionHandlerServiceTests.csproj
@@ -79,6 +79,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
@@ -108,9 +109,21 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ConfigHelperTests.cs" />
+    <Compile Include="PropertyChangeActionHelperTests.cs" />
+    <Compile Include="StateTransitionActionHelperTests.cs" />
+    <Compile Include="NotificationsActionHelperTests.cs" />
+    <Compile Include="GenerateUserStoriesActionHelperTests.cs" />
+    <Compile Include="GenerateTestsActionHelperTests.cs" />
+    <Compile Include="GenerateDescendantsActionHelperTests.cs" />
     <Compile Include="HandlerTests.cs" />
+    <Compile Include="ArtifactsPublishedActionHelperTests.cs" />
+    <Compile Include="TransportTests.cs" />
+    <Compile Include="HelperTests.cs" />
     <Compile Include="LoggingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryTests.cs" />
+    <Compile Include="SqlConnectionWrapperMock.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
