--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -225,10 +225,12 @@
     <Compile Include="Saml\SamlIssuerNameRegistry.cs" />
     <Compile Include="Services\Instance\IInstanceService.cs" />
     <Compile Include="Services\Instance\InstanceService.cs" />
+    <Compile Include="Services\Workflow\ITriggerConverter.cs" />
     <Compile Include="Services\Workflow\IWorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\IWorkflowService.cs" />
     <Compile Include="Services\Workflow\IWorkflowValidationErrorBuilder.cs" />
     <Compile Include="Services\Workflow\IWorkflowXmlValidator.cs" />
+    <Compile Include="Services\Workflow\TriggerConverter.cs" />
     <Compile Include="Services\Workflow\WorkflowDataValidationResult.cs" />
     <Compile Include="Services\Workflow\WorkflowDataValidator.cs" />
     <Compile Include="Services\Workflow\WorkflowService.cs" />
