--- a/svc/db/AdminStorage/AdminStorage.csproj
+++ b/svc/db/AdminStorage/AdminStorage.csproj
@@ -127,6 +127,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>7.4.1.0.sql</LastGenOutput>
     </Content>
+    <Content Include="Migration\8.1.0.0\DropApplicationLabels.sql" />
     <Content Include="Migration\8.2.0.0\8.2.0.0.sql">
       <DependentUpon>8.2.0.0.tt</DependentUpon>
       <AutoGen>True</AutoGen>
