DEV-516: Moved the sql project meta repository from ArtifactStore to ServiceLibrary to use it for the workflow in AdminStore

--- a/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
+++ b/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ArtifactPermissionsRepositoryTests.cs" />
     <Compile Include="Repositories\FileRepositoryTests.cs" />
+    <Compile Include="Repositories\ProjectMeta\SqlProjectMetaRepositoryTests.cs" />
     <Compile Include="Repositories\SqlArtifactRepositoryTests.cs" />
     <Compile Include="Repositories\SqlConnectionWrapperMock.cs" />
     <Compile Include="Repositories\ConfigControl\ServiceLogRepositoryTests.cs" />
