--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Models\Workflow\IeEvent.cs" />
     <Compile Include="Models\Workflow\IeStateCondition.cs" />
     <Compile Include="Models\Workflow\IeTrigger.cs" />
+    <Compile Include="Models\Workflow\IeUserGroup.cs" />
     <Compile Include="Models\Workflow\SqlArtifactTypesWorkflowDetails.cs" />
     <Compile Include="Models\Workflow\SqlWorkflowTransitionsAndPropertyChanges.cs" />
     <Compile Include="Models\Workflow\StatusUpdate.cs" />
