dev-549: undo local config changes

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -70,7 +70,7 @@
     <add key="SupportedActionTypes" value="All" />
 
     <!-- Message Queue Name. Please be advised that changing queue name in configuration has to be supported with changing queue name in other blueprint components. -->
-    <add key="MessageQueue" value="Albert.Queue" />
+    <add key="MessageQueue" value="Blueprint.Test.Cloud.MessageServer" />
 
     <!-- Error Queue Name. Error messages are forwarded to this queue. -->
     <add key="ErrorQueue" value="errors" />
