DEV-552 unit tests for license decryption

--- a/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
+++ b/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Helpers\WebApiConfigHelper.cs" />
     <Compile Include="LocalLog\LocalLogTests.cs" />
     <Compile Include="Models\Licenses\FeatureInformationTests.cs" />
+    <Compile Include="Models\Licenses\FeatureLicenseHelperTests.cs" />
     <Compile Include="Models\LicenseTransactionTests.cs" />
     <Compile Include="Models\PaginationExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
