--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -12,7 +12,7 @@
   <log4net>
     <root>
       <!-- Valid values are All < Debug < Info < Warn < Error < Fatal < Off -->
-      <level value="Warn" />
+      <level value="All" />
       <appender-ref ref="ServerFileAppender" />
     </root>
     <appender name="ServerFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -70,10 +70,10 @@
     <add key="SupportedActionTypes" value="All" />
 
     <!-- Message Queue Name. Please be advised that changing queue name in configuration has to be supported with changing queue name in other blueprint components. -->
-    <add key="MessageQueue" value="Blueprint.Test.Cloud.MessageServer" />
+    <add key="MessageQueue" value="workflowtestMessageQueue" />
 
     <!-- Error Queue Name. Error messages are forwarded to this queue. -->
-    <add key="ErrorQueue" value="errors" />
+    <add key="ErrorQueue" value="workflowtestErrorQueue" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
