put log level back to Warn

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -12,7 +12,7 @@
   <log4net>
     <root>
       <!-- Valid values are All < Debug < Info < Warn < Error < Fatal < Off -->
-      <level value="All" />
+      <level value="Warn" />
       <appender-ref ref="ServerFileAppender" />
     </root>
     <appender name="ServerFileAppender" type="log4net.Appender.RollingFileAppender">
