change back Queue names

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -70,10 +70,10 @@
     <add key="SupportedActionTypes" value="All" />
 
     <!-- Message Queue Name. Please be advised that changing queue name in configuration has to be supported with changing queue name in other blueprint components. -->
-    <add key="MessageQueue" value="workflowtestMessageQueue" />
+    <add key="MessageQueue" value="Blueprint.Test.Cloud.MessageServer" />
 
     <!-- Error Queue Name. Error messages are forwarded to this queue. -->
-    <add key="ErrorQueue" value="workflowtestErrorQueue" />
+    <add key="ErrorQueue" value="errors" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
