setting infrastructure for email notification

--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ActionMessage.cs" />
     <Compile Include="ActionMessageHeaders.cs" />
     <Compile Include="ArtifactsPublishedMessage.cs" />
+    <Compile Include="EmailSettings.cs" />
     <Compile Include="GenerateDescendantsMessage.cs" />
     <Compile Include="GenerateTestsMessage.cs" />
     <Compile Include="GenerateUserStoriesMessage.cs" />
