--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Helpers\GroupMapper.cs" />
     <Compile Include="Helpers\GroupsHelper.cs" />
     <Compile Include="Helpers\GroupValidator.cs" />
+    <Compile Include="Helpers\ProjectValidator.cs" />
     <Compile Include="Helpers\SortingHelper.cs" />
     <Compile Include="Helpers\UserConverter.cs" />
     <Compile Include="Helpers\PrivilegesManager.cs" />
@@ -129,6 +130,7 @@
     <Compile Include="Models\GroupDto.cs" />
     <Compile Include="Models\DeleteResult.cs" />
     <Compile Include="Models\GroupUser.cs" />
+    <Compile Include="Models\DTO\ProjectDto.cs" />
     <Compile Include="Models\QueryDataResult.cs" />
     <Compile Include="Models\SqlUser.cs" />
     <Compile Include="Models\TabularData.cs" />
