--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishedArtifactInformation.cs" />
     <Compile Include="PublishedPropertyInformation.cs" />
+    <Compile Include="SqlCustomToInstancePropertyTypeIds.cs" />
     <Compile Include="StateChangeMessage.cs" />
   </ItemGroup>
   <ItemGroup>
