Dev1428 Expose features with application settings

--- a/svc/lib/ServiceLibrary.Tests/App.config
+++ b/svc/lib/ServiceLibrary.Tests/App.config
@@ -4,6 +4,9 @@
     <add key="AccessControl" value="http://localhost:9101/svc/accesscontrol/" />
     <add key="ConfigControl" value="http://localhost:9101/svc/configcontrol/" />
   </appSettings>
+  <connectionStrings>
+    <add name="RaptorMain" connectionString="data source=RaptorMain" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
